[gd_scene load_steps=14 format=3 uid="uid://c1ep3kb6ax1ww"]

[ext_resource type="Texture2D" uid="uid://c8dq1eymdyk7v" path="res://Entities/Enemies/enemy_rpg.png" id="1_kkwn7"]
[ext_resource type="Script" path="res://Entities/Enemies/enemy_1.gd" id="1_recbe"]

[sub_resource type="Animation" id="Animation_thiia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_14cxf"]
resource_name = "dead_left"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_bbjlw"]
resource_name = "dead_right"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_a63l6"]
resource_name = "move_down_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_ujyh3"]
resource_name = "move_down_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_3nwcr"]
resource_name = "move_up_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_8yhtt"]
resource_name = "move_up_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2te50"]
_data = {
"RESET": SubResource("Animation_thiia"),
"dead_left": SubResource("Animation_14cxf"),
"dead_right": SubResource("Animation_bbjlw"),
"move_down_left": SubResource("Animation_a63l6"),
"move_down_right": SubResource("Animation_ujyh3"),
"move_up_left": SubResource("Animation_3nwcr"),
"move_up_right": SubResource("Animation_8yhtt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ffjdc"]
radius = 3.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eatpb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ffmag"]

[node name="Enemy_1" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_recbe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kkwn7")
offset = Vector2(0, -5)
hframes = 5
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2te50")
}
autoplay = "move_down_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ffjdc")

[node name="PatrollTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="hurtbox_collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_eatpb")
debug_color = Color(0.852624, 0.293953, 0.579967, 0.42)

[node name="hitbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 16

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ffmag")
debug_color = Color(2.02149e-06, 0.633315, 0.441829, 0.42)

[connection signal="timeout" from="PatrollTimer" to="." method="_on_patroll_timer_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
